--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@octokit/core": "^3.6.0",
@@ -26,9 +27,16 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
     "@types/uuid": "^8.3.4",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "husky": "^8.0.1",
     "typescript": "4.6.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
