--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   },
   "dependencies": {
     "@octokit/core": "^3.6.0",
+    "@radix-ui/react-accessible-icon": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^1.0.0",
+    "@radix-ui/react-select": "^1.0.0",
+    "@radix-ui/react-slot": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -26,6 +32,7 @@
     "@types/node": "17.0.32",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@types/react-icons": "^3.0.0",
     "@types/uuid": "^8.3.4",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
