--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@stitches/react": "^1.2.8",
+    "date-fns": "^2.29.1",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
@@ -27,6 +28,7 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@octokit/types": "^6.34.0",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "17.0.32",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
