--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@octokit/core": "^3.6.0",
+    "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accessible-icon": "^1.0.0",
     "@radix-ui/react-select": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
