--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@radix-ui/react-tooltip": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "date-fns": "^2.29.1",
-    "next": "12.1.6",
+    "next": "^13.0.3",
     "next-themes": "^0.2.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "uuid": "^8.3.2"
   },
@@ -38,7 +38,7 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.0.3",
     "husky": "^8.0.1",
     "typescript": "4.6.4"
   },
