--- a/package.json
+++ b/package.json
@@ -6,17 +6,45 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "commit": "git-cz",
+    "palette": "node generate-palette.js"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
+    "cuid": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "next": "13.2.4",
+    "node": "^19.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@types/cuid": "^2.0.1",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "@types/react-icons": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.0",
     "typescript": "5.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
