--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/colors": "^0.1.8",
     "cuid": "^3.0.0",
     "date-fns": "^2.30.0",
-    "next": "13.2.4",
+    "next": "^13.4.0",
     "node": "^19.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
